Merged revision 873068: Fixed disabled <button> dispatching events and getting pressed-down. Probably want to tweak the CSS some more to grey out the font, though.

BUG:170159

svn path=/trunk/KDE/kdelibs/; revision=873071