khtml/khtmlview.cpp
@@ -1321,8 +1321,6 @@ void KHTMLView::mouseDoubleClickEvent( QMouseEvent *_mouse )
                                            d->clickCount,_mouse,true,DOM::NodeImpl::MouseDblClick);
 
     khtml::RenderObject* r = mev.innerNode.handle() ? mev.innerNode.handle()->renderer() : 0;
-    if (r && r->isWidget() && !static_cast<RenderWidget*>(r)->isDisabled())
-	_mouse->ignore();
 
     if (!swallowEvent) {
 	khtml::MouseDoubleClickEvent event( _mouse, xm, ym, mev.url, mev.target, mev.innerNode, d->clickCount );
@@ -3690,8 +3688,8 @@ bool KHTMLView::dispatchMouseEvent(int eventId, DOM::NodeImpl *targetNode,
 
     if (targetNode) {
 	// if the target node is a disabled widget, we don't want any full-blown mouse events
-	khtml::RenderObject* r = targetNode ? targetNode->renderer() : 0;
-	if (r && r->isWidget() && static_cast<RenderWidget*>(r)->isDisabled())
+	if (targetNode->isGenericFormElement()
+	     && static_cast<HTMLGenericFormElementImpl*>(targetNode)->disabled())
 	    return true;
 
         // send the actual event
